# solana-polls

./: Anchor.toml  README.md  package.json  tsconfig.json
app/: README.md  package.json  tsconfig.json  webpack.config.js
app/src/: App.tsx  config.ts  index.tsx  solana_polls.json  solana_polls.ts  styles.scss
app/src/js/components/: Menu.tsx  Wallet.tsx
app/src/js/components/form/: NewPollForm.tsx  Radio.tsx  Submit.tsx
app/src/js/components/form/new_poll_form/: Input.tsx  Label.tsx  NewOptionForm.tsx  Option.tsx  Options.tsx  Title.tsx
app/src/js/components/menu/: Link.tsx  Logo.tsx
app/src/js/components/polls/: Poll.tsx  Results.tsx  Vote.tsx
app/src/js/lib/: poll.ts  vote.ts
app/src/js/pages/: Loading.tsx  NewPoll.tsx  Polls.tsx
programs/solana-polls/: Cargo.toml
programs/solana-polls/src/: lib.rs
programs/solana-polls/src/state/: mod.rs  poll.rs  vote.rs
tests/: solana-polls.ts
