[package]
authors = ["Christian Visintin <christian.visintin1997@gmail.com>"]
categories = ["web-programming"]
description = "Created with Anchor"
edition = "2021"
homepage = "https://github.com/veeso/solana-polls"
include = ["src/**/*", "../../LICENSE", "../../README.md", "../../CHANGELOG.md"]
keywords = ["solana", "solana-dapp", "solana-smart-contract", "anchor"]
license = "MIT"
name = "solana-polls"
readme = "../../README.md"
repository = "https://github.com/veeso/solana-polls"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_polls"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"

[dev-dependencies]
pretty_assertions = "^1.3"
